--- a/platformio.ini
+++ b/platformio.ini
@@ -13,18 +13,17 @@ default_envs = esp32dev
 data_dir = src/data
 
 [env:esp32dev]
-platform = espressif32 ;@ 6.3.2
+platform = platformio/espressif32
 framework = arduino
 board = nodemcu-32s
-platform_packages =
-	framework-arduinoespressif32 ;@ 2.0.6
+platform_packages =	platformio/framework-arduinoespressif32
 board_build.f_cpu = 240000000L
 board_build.flash_mode = qio
 lib_deps = 
 	;earlephilhower/ESP8266Audio @ ^1.9.7
 	gianbacchio/ESP8266Spiram @ ^1.0
 	;https://github.com/tzapu/WiFiManager.git
-	ArduinoJson @ ^6.19.4
+	ArduinoJson @ ^6.21.5
 upload_speed = 921600
 monitor_speed = 115200
 build_flags = 
